## 2.0.0
. support CVIM in mapping.html, options page and new-tab(blank.html) page.
. add defaut key map to pop up(detach) tab into new window; <kdb>wd</kbd> map to :tabdetach<cr>
. add defaut key map to pop up(detachWithChildren) tab into new window; <kdb>wD</kbd> map to tabDetachWithChildren
. fix problem of showTabIndex = true.
. fix next frame not working problem.
. adjust defaut key mapping.
. todo: add feature to save and read config in gist.

== Mouseless Changelog


## 1.4.6:

 . Fixed `openLastDownload` in #127 #138
 . Fixed `UnicodeDecodeError: 'ascii' codec can't decode byte 0xe2 in position 487: ordinal not in range(128)`  in #139
 . fixed #135 css colors
 . fixed #137 cleared up documentation
 . added #132 tabs detach + goto (outliner based). Only works if chrome keeps the `openerTabId`.
 . fixed #134 disabled chrome url support


## 1.4.5

 . Updated list of `chrome://` completion URLs when `:chrome` is used
 . Fixed issue with `openPasteTab` [#573](https://github.com/1995eaton/chromium-vim/issues/573)
 . Allow global site matches in cVimrc. For example, the following will unmap `j` on all sites:
```
site '*://*' {
  unmap j
}
```
 . Fix issue with certain hints not showing up (like the GitHub profile icon in the top-right corner of the page).
 . Fix [#569](https://github.com/1995eaton/chromium-vim/issues/569) (mappings like `map <C-A-M-i> nextTab` would work, but `map <C-M-A-i> nextTab` wouldn't)
 . Let `@"` represent the paste buffer in command bar commands (e.g. `tabnew wikipedia "@` would search Wikipedia for whatever is in the paste buffer)
 . Make `^` go to beginning of line when in insert mode
 . Fix vulnerability where sites are able to trigger keyboard events that would be interpreted by cVim ([#572](https://github.com/1995eaton/chromium-vim/issues/572))
  . Added jumplist feature #553 (`previousScrollPosition` is `<C-o>` and `nextScrollPosition` is `<C-i>`).